--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,5 @@
 @import "variables";
 @import "libs/normalize";
-
 @import "components/all";
 
 body {
@@ -105,7 +104,7 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 40px auto;
+    margin: 0 auto;
     .content__title {
       margin: 0;
     }
@@ -117,6 +116,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 
   .content__title {
@@ -142,6 +146,8 @@ body {
     align-items: center;
     cursor: pointer;
     @include noselect();
+    background: transparent;
+    border: none;
 
     span {
       display: inline-block;
@@ -169,17 +175,26 @@ body {
   }
 
   &__item {
-    display: flex;
+    display: grid;
+    grid-template-columns: 3fr 9fr 3fr 6fr 1fr;
+    column-gap: 7px;
     width: 100%;
     border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
 
+    @media (max-width: 500px) {
+      grid-template-columns: 7fr 2fr 3fr 1fr;
+    }
+
     &-img {
       display: flex;
       align-items: center;
-      margin-right: 15px;
-      width: 10%;
+      margin-right: 5px;
+
+      @media (max-width: 500px) {
+        display: none;
+      }
 
       img {
         width: 80px;
@@ -191,18 +206,25 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
 
       h3 {
         font-weight: bold;
         font-size: 22px;
         line-height: 27px;
         letter-spacing: 0.01em;
+
+        @media (max-width: 750px) {
+          font-size: 18px;
+        }
       }
 
       p {
         font-size: 18px;
         color: #8d8d8d;
+
+        @media (max-width: 750px) {
+          font-size: 14px;
+        }
       }
     }
 
@@ -210,7 +232,6 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
 
       &-minus {
         svg {
@@ -239,6 +260,10 @@ body {
 
       b {
         font-size: 22px;
+
+        @media (max-width: 750px) {
+          font-size: 16px;
+        }
       }
     }
 
@@ -246,12 +271,15 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
 
       b {
         font-weight: bold;
         font-size: 22px;
         letter-spacing: 0.01em;
+
+        @media (max-width: 750px) {
+          font-size: 16px;
+        }
       }
     }
 
@@ -259,7 +287,6 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      width: 4%;
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -294,6 +321,12 @@ body {
     &-details {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
+
+      @media (max-width: 550px) {
+        justify-content: center;
+        gap: 10px;
+      }
 
       span {
         font-size: 22px;
@@ -310,6 +343,12 @@ body {
       display: flex;
       justify-content: space-between;
       margin-top: 40px;
+      flex-wrap: wrap;
+
+      @media (max-width: 550px) {
+        justify-content: center;
+        gap: 20px;
+      }
 
       .go-back-btn {
         display: flex;
@@ -354,7 +393,7 @@ body {
 
   &--empty {
     margin: 0 auto;
-    width: 620px;
+    max-width: 620px;
     text-align: center;
 
     h2 {
