--- a/src/pages/PizzaInfo/PizzaInfo.module.scss
+++ b/src/pages/PizzaInfo/PizzaInfo.module.scss
@@ -1,10 +1,23 @@
+.root {
+  margin: 0 auto;
+  text-align: center;
+
+  button {
+    padding: 12px 0 14px;
+    width: 230px;
+    margin: 0 auto;
+    font-weight: 600;
+    font-size: 18px;
+  }
+}
+
 .description {
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 
   @media (max-width: 640px) {
     flex-wrap: wrap;
