--- a/src/pages/PizzaInfo/PizzaInfo.module.scss
+++ b/src/pages/PizzaInfo/PizzaInfo.module.scss
@@ -1,6 +1,9 @@
 .root {
   margin: 0 auto;
-  text-align: center;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   button {
     padding: 12px 0 14px;
@@ -17,7 +20,7 @@
   justify-content: center;
   align-items: center;
   column-gap: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 
   @media (max-width: 640px) {
     flex-wrap: wrap;
