--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@import "../variables";
 
 .button {
   display: inline-block;
@@ -8,7 +8,8 @@
   min-width: 100px;
   text-align: center;
   cursor: pointer;
-  transition: background-color $duration ease-in-out, border-color $duration ease-in-out;
+  transition: background-color $duration ease-in-out,
+    border-color $duration ease-in-out;
   border: 1px solid transparent;
   @include noselect();
 
@@ -102,7 +103,7 @@
 
     span {
       font-weight: 600;
-      font-size: 16px;
+      font-size: 20px;
     }
 
     &:hover {
