--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -2,6 +2,7 @@
 
 .sort {
   position: relative;
+  padding-left: 20px;
   &__label {
     display: flex;
     align-items: center;
@@ -17,7 +18,7 @@
 
     b {
       margin-right: 8px;
-      width: 121px;
+      width: 60px;
     }
 
     span {
@@ -49,10 +50,9 @@
       &::after {
         content: attr(value);
         position: absolute;
-        line-height: 16px;
-        left: -2em;
-        top: -4em;
-        font-size: 10px;
+        left: -1em;
+        top: -3em;
+        font-size: 12px;
         border-radius: 10px;
         padding: 5px;
         color: #000;
@@ -62,8 +62,8 @@
       }
       &:hover::after {
         opacity: 1;
-        left: -2em;
-        top: -4em;
+        left: -1em;
+        top: -3em;
       }
     }
   }
