--- a/src/pages/PizzaInfo/PizzaInfo.module.scss
+++ b/src/pages/PizzaInfo/PizzaInfo.module.scss
@@ -36,17 +36,20 @@
     font-size: 32px;
     font-weight: 700;
     margin-bottom: 20px;
+    padding-left: 5px;
   }
 
   p {
     max-width: 400px;
     font-size: 16px;
     margin-bottom: 20px;
+    padding-left: 5px;
   }
 
   h3 {
     font-size: 24px;
     margin-bottom: 10px;
+    padding-left: 5px;
 
     span {
       font-weight: normal;
