Fixed error styling

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -31,7 +31,7 @@ body {
 
   &__error-info {
     margin: 100px auto;
-    width: 520px;
+    max-width: 520px;
     text-align: center;
 
     h2 {
