--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -118,7 +118,8 @@ body {
   .content__title {
     display: flex;
     align-items: center;
-    font-size: 32px;
+    font-size: 26px;
+    font-weight: 700;
 
     svg {
       position: relative;
